// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChoosePlan page tests should disable submit and plan picker when submitting 1`] = `
<form>
  <CenteredLogo />
  <Grid>
    <Grid.Column>
      <Panel>
        <_default
          bundles={
            Array [
              Object {
                "bundle": "bundle",
                "messaging": Object {
                  "price": 0,
                },
              },
            ]
          }
          disabled={true}
          onChange={[Function]}
          selectedPromo={Object {}}
        />
        <Panel.Section>
          <PromoCodeNew
            handlePromoCode={
              Object {
                "applyPromoCode": [Function],
                "clearPromoCode": [MockFunction],
              }
            }
            key="promocode"
            promoCodeObj={
              Object {
                "promoError": undefined,
                "promoPending": false,
                "selectedPromo": Object {},
              }
            }
          />
        </Panel.Section>
        <CreditCardSection
          billing={
            Object {
              "countries": Array [],
              "promoPending": false,
              "selectedPromo": Object {},
            }
          }
          isPlanFree={false}
          submitting={true}
        />
        <Panel.Section>
          <Button
            disabled={true}
            fullWidth={true}
            primary={true}
            size="large"
            type="submit"
          >
            Updating Subscription...
          </Button>
        </Panel.Section>
      </Panel>
    </Grid.Column>
  </Grid>
</form>
`;

exports[`ChoosePlan page tests should render component 1`] = `<Loading />`;

exports[`ChoosePlan page tests should render correctly 1`] = `
<form>
  <CenteredLogo />
  <Grid>
    <Grid.Column>
      <Panel>
        <_default
          bundles={
            Array [
              Object {
                "bundle": "bundle",
                "messaging": Object {
                  "price": 0,
                },
              },
            ]
          }
          disabled={false}
          onChange={[Function]}
          selectedPromo={Object {}}
        />
        <Panel.Section>
          <PromoCodeNew
            handlePromoCode={
              Object {
                "applyPromoCode": [Function],
                "clearPromoCode": [MockFunction],
              }
            }
            key="promocode"
            promoCodeObj={
              Object {
                "promoError": undefined,
                "promoPending": false,
                "selectedPromo": Object {},
              }
            }
          />
        </Panel.Section>
        <CreditCardSection
          billing={
            Object {
              "countries": Array [],
              "promoPending": false,
              "selectedPromo": Object {},
            }
          }
          isPlanFree={false}
          submitting={false}
        />
        <Panel.Section>
          <Button
            disabled={false}
            fullWidth={true}
            primary={true}
            size="large"
            type="submit"
          >
            Get Started
          </Button>
        </Panel.Section>
      </Panel>
    </Grid.Column>
  </Grid>
</form>
`;

exports[`ChoosePlan page tests should show free bullets when isFree is selected 1`] = `
<form>
  <CenteredLogo />
  <Grid>
    <Grid.Column>
      <Panel>
        <_default
          bundles={
            Array [
              Object {
                "bundle": "bundle",
                "messaging": Object {
                  "price": 0,
                },
              },
            ]
          }
          disabled={false}
          onChange={[Function]}
          selectedPromo={Object {}}
        />
        <Panel.Section>
          <PromoCodeNew
            handlePromoCode={
              Object {
                "applyPromoCode": [Function],
                "clearPromoCode": [MockFunction],
              }
            }
            key="promocode"
            promoCodeObj={
              Object {
                "promoError": undefined,
                "promoPending": false,
                "selectedPromo": Object {},
              }
            }
          />
        </Panel.Section>
        <CreditCardSection
          billing={
            Object {
              "countries": Array [],
              "promoPending": false,
              "selectedPromo": Object {},
            }
          }
          isPlanFree={false}
          submitting={false}
        />
        <Panel.Section>
          <Button
            disabled={false}
            fullWidth={true}
            primary={true}
            size="large"
            type="submit"
          >
            Get Started
          </Button>
        </Panel.Section>
      </Panel>
    </Grid.Column>
  </Grid>
</form>
`;
